--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,linux,macos,django
 
 ### Django ###
+ventas/migrations
 *.log
 *.pot
 *.pyc
